fix <hr> tag flicker when refreshing

--- a/css/style.css
+++ b/css/style.css
@@ -161,7 +161,3 @@ p{
 [v-cloak] {
     display: none;
 }
-
-hr {
-    display:none;
-}
